--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.6</version>
+			<version>8.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -74,20 +74,24 @@
            <scope>provided</scope>
        </dependency>		
        
+       
+<!--        uncomment to run on tomcat   -->
        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-tomcat</artifactId>
-		    <version>1.5.1.RELEASE</version>
-		     <scope>provided</scope>	
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.springframework.boot</groupId> -->
+<!-- 		    <artifactId>spring-boot-starter-tomcat</artifactId> -->
+<!-- 		    <version>1.5.1.RELEASE</version> -->
+<!-- 		     <scope>provided</scope>	 -->
+<!-- 		</dependency> -->
 		
-		<dependency>
-		  <groupId>org.apache.tomcat</groupId>
-		  <artifactId>tomcat-catalina</artifactId>
-		  <version>7.0.47</version>
-		  <scope>provided</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		  <groupId>org.apache.tomcat</groupId> -->
+<!-- 		  <artifactId>tomcat-catalina</artifactId> -->
+<!-- 		  <version>7.0.47</version> -->
+<!-- 		  <scope>provided</scope> -->
+<!-- 		</dependency> -->
+  
+  
   </dependencies>
   
   	<build>  	
