--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.sourceinfotech</groupId>
-  <artifactId>PaymentSystem</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+	<groupId>com.sourceinfotech</groupId>
+	<artifactId>PaymentSystem</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
-  <name>PaymentSystem</name>
-  <url>http://maven.apache.org</url>
+	<name>PaymentSystem</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
+	</properties>
 
-  <dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -23,17 +23,17 @@
 		</dependency>
 
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>1.5.1.RELEASE</version>
-        </dependency>		
-		
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>1.5.1.RELEASE</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>1.5.1.RELEASE</version>
 		</dependency>
-		
+
 		<!-- Performance Metrics -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,41 +64,52 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.6.1</version>
-		</dependency>	
+		</dependency>
 
-    	<!-- Servlet Library -->
-       <dependency>
-           <groupId>javax.servlet</groupId>
-           <artifactId>javax.servlet-api</artifactId>
-           <version>3.1.0</version>
-           <scope>provided</scope>
-       </dependency>		
-       
-       
-<!--        uncomment to run on tomcat   -->
-       <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
-<!-- 		<dependency> -->
-<!-- 		    <groupId>org.springframework.boot</groupId> -->
-<!-- 		    <artifactId>spring-boot-starter-tomcat</artifactId> -->
-<!-- 		    <version>1.5.1.RELEASE</version> -->
-<!-- 		     <scope>provided</scope>	 -->
-<!-- 		</dependency> -->
-		
-<!-- 		<dependency> -->
-<!-- 		  <groupId>org.apache.tomcat</groupId> -->
-<!-- 		  <artifactId>tomcat-catalina</artifactId> -->
-<!-- 		  <version>7.0.47</version> -->
-<!-- 		  <scope>provided</scope> -->
-<!-- 		</dependency> -->
-  
-  
-  </dependencies>
-  
-  	<build>  	
-  		
-  		<finalName>PaymentSystem</finalName>
-		<plugins>			 
-      
+		<!-- Servlet Library -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- Swagger Dependencies -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
+		<!-- uncomment to run on tomcat -->		
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.boot</groupId> -->
+		<!-- <artifactId>spring-boot-starter-tomcat</artifactId> -->
+		<!-- <version>1.5.1.RELEASE</version> -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.tomcat</groupId> -->
+		<!-- <artifactId>tomcat-catalina</artifactId> -->
+		<!-- <version>7.0.47</version> -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
+
+
+	</dependencies>
+
+	<build>
+
+		<finalName>PaymentSystem</finalName>
+		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -123,14 +134,14 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>			
+			</plugin>
 			<plugin>
-			       <groupId>org.apache.tomcat.maven</groupId>
-			       <artifactId>tomcat7-maven-plugin</artifactId>
-			       <version>2.2</version>
-     		 </plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
 		</plugins>
 	</build>
-  
-  
+
+
 </project>
